js/js.translator/testData/incremental/invalidation/classWithJsExport/lib2/lib.0.kt
class FooImpl : Foo() {
   override fun foo() = "OK"
}